--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-    <heads>
+    <head>
         <meta charset="UTF-8" />
         <meta
             name="viewport"
@@ -19,10 +19,14 @@
         <link rel="stylesheet" href="/main.css" />
 
 
-    </heads
+    </head>
     <body>
         <div id="root"></div>
         <script src="/js/molstar.js"></script>
         <script src="/js/main.js"></script>
+        <script>
+            // Initialize the application with the specified root element ID
+            app.core.init("root");
+        </script>
     </body>
 </html>
